# s21_snake

./: CMakeLists.txt  Doxyfile  gen_make.sh  main.cpp
Snake/src/: gameobj.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Snake/view/: boardview.cpp  boardview.h
brick_game/tests/: check_lib.c
brick_game/tetris/: backend.c  tetris.h  tetris_backend.h
cmake/: cpack_config.cmake.in
consoleView/: frontend.h  main.cpp
models/: TetraminoFactory.cpp  gameModel.cpp  main.cpp
models/SharedModule/: CMakeLists.txt
models/SharedModule/inc/: BaseBoardModel.h
models/SharedModule/src/: BaseBoardModel.cpp  Timer.cpp  main.cpp
models/SnakeCore/: CMakeLists.txt
models/SnakeCore/inc/: FabricSnakeFood.h  SnakeGameModel.h  SnakeModel.h
models/SnakeCore/src/: FabricSnakeFood.cpp  SnakeGameModel.cpp  SnakeModel.cpp
models/SnakeCore/test/: test.h  tests.cpp
models/TetrisCore/: CMakeLists.txt
models/TetrisCore/inc/: TetrisBoardModel.h  TetrisGameModel.h  TetrominoFactory.h
models/TetrisCore/src/: TetrisBoardModel.cpp  TetrisGameModel.cpp  TetrominoFactory.cpp
models/TetrisCore/test/: test.h  tests.cpp
models/UnionModule/: CMakeLists.txt  Makefile  cmake_install.cmake
models/UnionModule/UnionLib_autogen/: deps  moc_predefs.h
models/UnionModule/inc/: BaseBoardModel.h  Timer.h
models/UnionModule/src/: BaseBoardModel.cpp  Timer.cpp
models/UnionModule/test/: test.h  tests.cpp
models/inc/: BaseBoardModel.h  SnakeGameModel.h  SnakeHead.h  SnakeItem.h  SnakeModel.h  SnakeTail.h  TetraminoFactory.h  TetrisBoardModel.h  TetrisGameModel.h  TetrominoFactory.h  Timer.h  boardModel.h  gameModel.h
models/src/: BaseBoardModel.cpp  SnakeGameModel.cpp  SnakeHead.cpp  SnakeItem.cpp  SnakeModel.cpp  SnakeTail.cpp  TetraminoFactory.cpp  TetrisBoardModel.cpp  TetrisGameModel.cpp  TetrominoFactory.cpp  Timer.cpp  boardModel.cpp  gameModel.cpp  main.cpp
src/: TetraminoFactory.cpp  TetraminoFactory.h  boardModel.cpp  boardModel.h  dialog.cpp  dialog.h  dialog.ui  gameModel.cpp  gameModel.h  gameobj.cpp  gameobj.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shapeModel.cpp  shapeModel.h  ui_dialog.h  ui_mainwindow.h
tests/: test.h  tests.cpp
tetris/src/: CMakeLists.txt  Doxyfile  Makefile  tetris.c
tetris/src/brick_game/tetris/: backend.c  tetris.h
tetris/src/gui/cli/: frontend.c  tetris_frontend.h
view/: boardview.cpp  boardview.h  mainwindow.cpp  mainwindow.ui
view/CLI/: CMakeLists.txt  frontend.cpp  frontend.h  snakeCLI.cpp
view/Desktop/: BrickGameDesktop.cpp  CMakeLists.txt
view/Desktop/inc/: SnakeView.h
view/Desktop/src/: BoardView.cpp  ButtonBoardView.cpp  InfoBoardView.cpp  SnakeView.cpp  StartScreenView.cpp  TetrisView.cpp  mainwindow.cpp
view/inc/: BoardView.h  ButtonBoardView.h  InfoBoardView.cpp  InfoBoardView.h  SnakeView.h  StartScreenView.h  TetrisView.h  boardview.h  mainwindow.h  ui_mainwindow.h
view/src/: BoardView.cpp  ButtonBoardView.cpp  InfoBoardView.cpp  SnakeView.cpp  StartScreenView.cpp  TetrisView.cpp  boardview.cpp  mainwindow.cpp
